add block description, table, form for feedback

--- a/index.html
+++ b/index.html
@@ -1,144 +1,238 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="./scss/main.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cygre&display=swap">
+    <link rel="stylesheet" type="text/css" href="./scss/main.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Cygre&display=swap"
+    />
+  </head>
 
-</head>
-
-<body>
-
-
+  <body>
     <div class="header">
-        <div>
-            <svg width="12" height="18" viewBox="0 0 12 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" clip-rule="evenodd"
-                    d="M0 2.95507C0 1.8505 0.895431 0.955078 2 0.955078H10C11.1046 0.955078 12 1.8505 12 2.95507V15.9184C12 17.023 11.1046 17.9184 10 17.9184H2C0.895431 17.9184 0 17.023 0 15.9184V2.95507ZM7 15.9227C7 16.4738 6.55228 16.9206 6 16.9206C5.44772 16.9206 5 16.4738 5 15.9227C5 15.3716 5.44772 14.9249 6 14.9249C6.55228 14.9249 7 15.3716 7 15.9227ZM10 2.95077H2V13.927H10V2.95077Z"
-                    fill="white" />
-            </svg>
-            <p> +375 (44) 53-53-444</p>
-        </div>
+      <div>
+        <img class="phone-icon" src="./resource/phone.png">
+        <p>+375 (44) 53-53-444</p>
+      </div>
 
-        <div>
-            <svg width="18" height="16" viewBox="0 0 18 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <g clip-path="url(#clip0_30_371)">
-                    <g clip-path="url(#clip1_30_371)">
-                        <path fill-rule="evenodd" clip-rule="evenodd"
-                            d="M2 1.72363C0.895431 1.72363 0 2.61907 0 3.72364V5.237L9.01005 10.1416L18 5.65575V3.72363C18 2.61906 17.1046 1.72363 16 1.72363H2ZM18 6.77333L9.22325 11.1528L8.98995 11.2692L8.76095 11.1446L0 6.37556V12.6973C0 13.8019 0.89543 14.6973 2 14.6973H16C17.1046 14.6973 18 13.8019 18 12.6973V6.77333Z"
-                            fill="white" />
-                    </g>
-                </g>
-                <defs>
-                    <clipPath id="clip0_30_371">
-                        <rect width="18" height="15" fill="white" transform="translate(0 0.77002)" />
-                    </clipPath>
-                    <clipPath id="clip1_30_371">
-                        <rect width="18" height="15" fill="white" transform="translate(0 0.77002)" />
-                    </clipPath>
-                </defs>
-            </svg>
-            <p> info@110.by</p>
-        </div>
-        <div>
-            <p style="font-size: 16px;">Пн-Пт 9.00-18.00</p>
-        </div>
+      <div>
+        <img class="mail-icon" src="./resource/mail.png">
+        <p>info@110.by</p>
+      </div>
+      <div>
+        <p style="font-size: 16px">Пн-Пт 9.00-18.00</p>
+      </div>
     </div>
 
     <div class="navbar">
-        <div class="logo">
-            <img src="./resource/logo.png">
-
-        </div>
-        <div class="menu">
-            <p>главная</p>
-            <p style="color: #112134; font-weight: 700;">услуги</p>
-            <p>сертификаты</p>
-            <p>цены</p>
-            <p>статьи</p>
-            <p>контакты</p>
-        </div>
-        <div class="button-order">
-            <button>Заказать просчет</button>
-        </div>
+      <div class="logo">
+        <img src="./resource/logo.png" />
+      </div>
+      <div class="menu">
+        <p>главная</p>
+        <p style="color: #112134; font-weight: 700">услуги</p>
+        <p>сертификаты</p>
+        <p>цены</p>
+        <p>статьи</p>
+        <p>контакты</p>
+      </div>
+      <div class="button-order">
+        <button>Заказать просчет</button>
+      </div>
     </div>
 
     <div class="description">
-        <div class="back">
-
-            <div class="breadcrumbs">
-                <a>Главная / </a>
-                <a>Услуги / </a>
-                <a class="check">Обследование зданий</a>
-            </div>
-
-            <div class="description-text">
-
-                <p>Техническое обследование зданий и сооружений — ваша основа безошибочного проектирования и
-                    эксплуатации строительных конструкций объектов недвижимости</p>
-
-            </div>
-
+      <div class="back">
+        <div class="breadcrumbs">
+          <a>Главная / </a>
+          <a>Услуги / </a>
+          <a class="check">Обследование зданий</a>
         </div>
+
+        <div class="description">
+          <p>
+            Техническое обследование зданий и сооружений — ваша основа
+            безошибочного проектирования и эксплуатации строительных конструкций
+            объектов недвижимости
+          </p>
+        </div>
+      </div>
     </div>
 
+    <div class="description-text">
+      <p>
+        Техническое обследование строительных конструкций и инженерных систем
+        зданий
+      </p>
+    </div>
+
+    <div class="table">
+      <table>
+        <tr>
+          <th class="type-work">Вид работ</th>
+          <th class="general">Общее</th>
+          <th class="detailed">Детальное</th>
+        </tr>
+        <tr>
+          <td>Обследование строительных конструкций</td>
+          <td class="tick"><img src="./resource/tick.png" /></td>
+          <td class="tick"><img src="./resource/tick.png" /></td>
+        </tr>
+        <tr>
+          <td>Обмерные работы с разработкой графических материалов</td>
+          <td class="tick"><img src="./resource/tick.png" /></td>
+          <td class="tick"><img src="./resource/tick.png" /></td>
+        </tr>
+        <tr>
+          <td>Составление ведомости дефекта</td>
+          <td class="tick"><img src="./resource/tick.png" /></td>
+          <td class="tick"><img src="./resource/tick.png" /></td>
+        </tr>
+        <tr>
+          <td>Тепловизионное обследование</td>
+          <td class="tick"><img src="./resource/tick.png" /></td>
+          <td class="tick"><img src="./resource/tick.png" /></td>
+        </tr>
+        <tr>
+          <td>Выполнение теплотехнических расчетов ограждающих конструкций</td>
+          <td class="tick"><img src="./resource/tick.png" /></td>
+          <td class="tick"><img src="./resource/tick.png" /></td>
+        </tr>
+        <tr>
+          <td>Обследование инженерных сетей и систем</td>
+          <td class="tick"><img src="./resource/tick.png" /></td>
+          <td class="tick"><img src="./resource/tick.png" /></td>
+        </tr>
+        <tr>
+          <td>
+            Анализ результатов обследования и заключение о состоянии
+            строительных конструкций с общими выводами и рекомендациями
+          </td>
+          <td class="tick"><img src="./resource/tick.png" /></td>
+          <td class="tick"><img src="./resource/tick.png" /></td>
+        </tr>
+        <tr>
+          <td>
+            Определение прочностных характеристик материалов и армирования
+          </td>
+          <td></td>
+          <td class="tick"><img src="./resource/tick.png" /></td>
+        </tr>
+        <tr>
+          <td>Лабораторные испытания отобранных образцов</td>
+          <td></td>
+          <td class="tick"><img src="./resource/tick.png" /></td>
+        </tr>
+        <tr>
+          <td>
+            Выполнение поверочных расчетов несущей способности конструкций
+          </td>
+          <td></td>
+          <td class="tick"><img src="./resource/tick.png" /></td>
+        </tr>
+        <tr>
+          <td>
+            Анализ состояния строительных конструкций и заключение, в котором
+            представлены технические решения, включающие схемы усиления с
+            рекомендуемыми материалами и последовательность работ, для ремонта
+            или усиления отдельных несущих элементов, а также выводы и
+            рекомендации.
+          </td>
+          <td></td>
+          <td class="tick"><img src="./resource/tick.png" /></td>
+        </tr>
+        <tr>
+          <td>Составление эксплуатационно-технического паспорта</td>
+          <td></td>
+          <td class="tick"><img src="./resource/tick.png" /></td>
+        </tr>
+        <tr class="table-cost">
+          <td></td>
+          <td>
+            <div>
+              <p>от 3 дней <br>
+                от 300 BYN</br></p>
+                <button>Смотреть</button>
+            </div>
+          </td>
+          <td> <div>
+            <p>от 5 дней <br>
+              от 600 BYN</br></p>
+              <button>Смотреть</button>
+          </div></td>
+        </tr>
+      </table>
+    </div>
 
     <div class="projects">
-        <p class="heading">Наши проекты</p>
-        <h2>Наши объекты</h2>
-        <div class="list-objects">
-
-            <div class="object">
-                <div>
-                    <img src="./resource/object1.png">
-                    <h6>Каток Центрального района</h6>
-                    <p>Определить техническое состояние
-                        и возможность дальнейшей безопасной
-                        эксплуатации сооружения.Определить техническое состояние
-                        и возможность дальнейшей безопасной
-                        эксплуатации сооружения</p>
-                </div>
-                <button>Смотреть</button>
-            </div>
-
-            <div class="object">
-                <div>
-                    <img src="./resource/object2.png">
-                    <h6>Комплекс зданий</h6>
-                    <p>Определить техническое состояние
-                        и возможность дальнейшей безопасной
-                        эксплуатации сооружения</p>
-                </div>
-                <button>Смотреть</button>
-            </div>
-
-            <div class="object">
-                <div>
-                    <img src="./resource/object3.png">
-                    <h6>Дымовая труба завода</h6>
-                    <p>Установить текущее состояние зданий
-                        и сооружений</p>
-                </div>
-                <button>Смотреть</button>
-            </div>
-
-            <div class="object">
-                <div>
-                    <img src="./resource/object4.png">
-                    <h6>Каток</h6>
-                    <p>Определить техническое состояние
-                        и возможность дальнейшей безопасной
-                        эксплуатации сооружения
-                    </p>
-                </div>
-                <button>Смотреть</button>
-            </div>
-
+      <p class="heading">Наши проекты</p>
+      <h2>Наши объекты</h2>
+      <div class="list-objects">
+        <div class="object">
+          <div>
+            <img src="./resource/object1.png" />
+            <h6>Каток Центрального района</h6>
+            <p>
+              Определить техническое состояние и возможность дальнейшей
+              безопасной эксплуатации сооружения.Определить техническое
+              состояние и возможность дальнейшей безопасной эксплуатации
+              сооружения
+            </p>
+          </div>
+          <button>Смотреть</button>
         </div>
-    </div>
-</body>
 
+        <div class="object">
+          <div>
+            <img src="./resource/object2.png" />
+            <h6>Комплекс зданий</h6>
+            <p>
+              Определить техническое состояние и возможность дальнейшей
+              безопасной эксплуатации сооружения
+            </p>
+          </div>
+          <button>Смотреть</button>
+        </div>
+
+        <div class="object">
+          <div>
+            <img src="./resource/object3.png" />
+            <h6>Дымовая труба завода</h6>
+            <p>Установить текущее состояние зданий и сооружений</p>
+          </div>
+          <button>Смотреть</button>
+        </div>
+
+        <div class="object">
+          <div>
+            <img src="./resource/object4.png" />
+            <h6>Каток</h6>
+            <p>
+              Определить техническое состояние и возможность дальнейшей
+              безопасной эксплуатации сооружения
+            </p>
+          </div>
+          <button>Смотреть</button>
+        </div>
+      </div>
+    </div>
+    <div class="feedback">
+      <p class="heading">Обратная связь</p>
+      <h2>Заказать звонок</h2>
+      <div class="additional-info">
+        <p>
+          Связаться с нами можно по телефону +375 (44) 53-53-444 <br />(Viber,
+          Telegram, WhatsApp).
+        </p>
+      </div>
+      <div class="form">
+        <input placeholder="Ваше имя" />
+        <input placeholder="+375 (29) 123-45-67" />
+        <button>Отправить</button>
+      </div>
+    </div>
+  </body>
 </html>
